2005-08-24  Martin Felis <martin@silef.de>

	* todo-db.c, gpe/todo-db.h : Added todoid field.

2005-08-19  Florian Boor <florian@kernelconcepts.de>

    * todo-db.c (todo_db_start): Fix minor memory leak.

2005-07-25  Florian Boor <florian@kernelconcepts.de>

	* debian/*: Minor dependency fix for maemo stuff.

2005-06-04  Florian Boor <florian@kernelconcepts.de>

	* configure.ac, Makefile.am: Merge in support for maemo debian
                                     packages.
	* debian/*: Support files for package creation.
	* autogen.sh: Don't call configure here.


2005-05-11  Florian Boor <florian@kernelconcepts.de>

	* Version 0.09 released.

2005-04-08  Florian Boor <florian@kernelconcepts.de>

	* todo-db.c, todo-db.h: Add documentaion.
	* doc/Makefile.am, doc/gtk-doc.make, doc/libtododb-docs.sgml:
	  New files for API documentation support.
	* configure.ac: Push version to 0.09. Add support for gtk-doc.
	
2005-04-15  Florian Boor <florian@kernelconcepts.de>

	* autogen.sh, libtool-cross.patch: Add patch to fix libtool for crosscompiling.
	* Add autotools support.
	* .cvsignore: Teach CVS to ignore many files.

2004-10-17  Phil Blundell  <pb@nexus.co.uk>

	* Version 0.08 released.

2004-10-17  Phil Blundell  <pb@nexus.co.uk>

	* todo-db.c (todo_db_refresh): New function.
	* gpe/todo-db.h (todo_db_refresh): Add prototype.

2004-03-25  Philip Blundell  <philb@gnu.org>

	* Version 0.07 released.

2004-03-25  Philip Blundell  <philb@gnu.org>

	* Makefile: Bring up to modern standards vis-a-vis PACKAGE_CFLAGS,
	etc.

2004-02-29  Phil Blundell  <pb@nexus.co.uk>

	* Version 0.06 released.

2004-02-29  Phil Blundell  <pb@nexus.co.uk>

	* todo-db.c (item_data_callback): Fix cut and paste error.

2004-02-23  Phil Blundell  <pb@nexus.co.uk>

	* Version 0.05 released.

2004-02-22  Phil Blundell  <pb@nexus.co.uk>

	* todo-db.c (item_data_callback): Correct disastrous typo.

2004-02-22  Phil Blundell  <pb@nexus.co.uk>

	* Version 0.04 released.
